<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".ui.scan.ScanFragment"
    tools:ignore="contentDescription">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/mtoolbar_scan"
                style="@style/Widget.Coral_ID.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:navigationIcon="@drawable/ic_close" />

            <TextView
                android:id="@+id/text_toolbar_title"
                style="@style/TextAppearance.Coral_ID.Toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/scan_coral" />

            <ImageButton
                android:id="@+id/btn_storage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_storage"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/storage_desc" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/camera_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_card"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <androidx.camera.view.PreviewView
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/image_preview"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:contentDescription="@string/image_preview_desc"/>

        <ImageButton
            android:id="@+id/btn_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="5dp"
            android:src="@drawable/ic_flash_off"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/flash_config" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/capture_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Coral_ID.Toolbar"
                android:text="@string/camera_suggestion"
                android:textAlignment="center"
                android:textSize="12sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:textColor="@color/primaryTextColor"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_medium"
                android:layout_gravity="center_horizontal"
                app:icon="@drawable/ic_baseline_camera_24"
                app:cornerRadius="18dp"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/confirm_card"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.Coral_ID.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/process_confirm"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/primaryTextColor"
                android:textSize="12sp"
                app:cornerRadius="18dp"
                android:layout_marginStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_confirm_no"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/primaryColor"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textSize="12sp"
                app:cornerRadius="18dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/primaryColor"
                app:layout_constraintEnd_toStartOf="@+id/btn_confirm_yes"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_confirm_yes" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>